Sep 5, 2010
Implemented division using Newton inversion.

Sep 2, 2010
Fixed a bug in conversion from string. Now could correctly treat: 0.395e2 -> 40.

Aug 31, 2010
Fixed a bug in mulplication.

Jan 11, 2009
Added multiplication. The speed is faster by a factor of 2 than Python

Jan 9, 2009
Convertion from string to bigint is done, but not exclusivly tested
Fixed a bug. "0.0055e2" -> "1" correctly

Jan 8, 2009
Added a few functions, such as multiply by int, divide by power of 10

Jan 7, 2009
Found bug in bigint_from_string: Crashes on "0.395e2", with BIGINT_RADIX = 10

Jan 6, 2009
Fixed a bug in adding negative numbers

Jan 5, 2009
Added convert functions, and add, sub function